--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
   <h1 style="text-align:center;">
     Welcome to <b>{{ title }}!</b>
-  </h1>
+   
+  </h1>-->
+<router-outlet>
+</router-outlet>
 
 
