--- a/src/app/caissier/caissier.component.html
+++ b/src/app/caissier/caissier.component.html
@@ -2,17 +2,32 @@
   <!--<h1 style="text-align:center;">
     Welcome to <b>{{ title }}!</b>
   </h1>-->
-  <div>
-				<p style="color:green;text-align:center;font-size:1.5em">caissier : rasta <button class="btn btn-danger" [routerLink]="['/login']">se deconnecter</button></p>
-				
-	</div>
-  <div class="row">
-		<div class="col-lg-3" >
-        <app-menus [dashboard]="true" [vente]="true" [histoire]="true" [profile]="true"></app-menus>
-		</div>
-		<div class="col-lg-8">
-			 <router-outlet></router-outlet>
-		</div>
-  </div>
+  
+  <div class="container">
+    <div class="row">
+         <div class="col-lg-12">
+              <div class="row">
+                  <div class="col-lg-1"></div>
+                  <div class="col-lg-10">
+                     <!-- Menu de la section vente -->
+                  </div>
+                  <div class="col-lg-1">
+                     <button class="btn btn-danger" [routerLink]="['/login']"><i class="fa fa-power-off"></i>Déconnéction</button>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-lg-3" >
+                      <app-menus [dashboard]="true" [vente]="true" [histoire]="true" [profile]="true"></app-menus>
+                  </div>
+                  <div class="col-lg-8">
+                     
+                  </div>
+              </div>
+         </div>
+    </div>
+</div>
+<router-outlet></router-outlet>
+
+  
  
 
