--- a/src/app/menus/menus.component.html
+++ b/src/app/menus/menus.component.html
@@ -1,6 +1,6 @@
 <ul class="list-group " id="uli">
-    <li class="list-item" *ngIf="this.dashboard==true" style="border:2px solid white;background-color:green;border-radius:20px;text-align:center;border:2px solid white;"><a style="color:white;" ><b><i>DASHBOARD</i></b></a></li>
-    <li class="list-item" *ngIf="this.vente==true" style="border:2px solid white;background-color:green;border-radius:20px;text-align:center;border:2px solid white"><a style="color:white;" [routerLink]="['/caissier','vente']"><b><i>VENTE</i></b></a></li>
-    <li class="list-item" *ngIf="this.histoire==true" style="border:2px solid white;background-color:green;border-radius:20px;text-align:center"><a style="color:white;"><b><i>HISTORIQUE</i></b></a></li>
-    <li class="list-item" *ngIf="this.profile==true" style="border:2px solid white;background-color:green;border-radius:20px;text-align:center"><a style="color:white;"><span class="glyphicon glyphicon-user"></span><b><i>PROFIL</i></b></a></li>
+    <li class="list-item" *ngIf="this.dashboard==true" [routerLink]="['/dashboard']"><i class="fa fa-navicon" ></i><a><b><i>DASHBOARD</i></b></a></li>
+    <li class="list-item" *ngIf="this.vente==true" [routerLink]="['/vente']"><i class="fa fa-cart-plus" ></i><a><b><i>VENTE</i></b></a></li>
+    <li class="list-item" *ngIf="this.histoire==true" [routerLink]="['/histoire']"><i class="fa fa-history" ></i><a><b><i>HISTORIQUE</i></b></a></li>
+    <li class="list-item" *ngIf="this.profile==true" [routerLink]="['/profil']"><i class="fa fa-id-card-o" ></i><a><b><i>PROFIL</i></b></a></li>
 </ul> 
