--- a/src/app/caissier/caissier.component.html
+++ b/src/app/caissier/caissier.component.html
@@ -5,7 +5,7 @@
   
   <div class="container">
     <div class="row">
-         <div class="col-lg-12">
+         <div class="col-lg-3">
               <div class="row">
                   <div class="col-lg-1"></div>
                   <div class="col-lg-10">
@@ -24,9 +24,13 @@
                   </div>
               </div>
          </div>
+         <div class="col-lg-8">
+			 <router-outlet></router-outlet>
+         </div>
     </div>
 </div>
-<router-outlet></router-outlet>
+
+
 
   
  
