--- a/src/app/vente/vente.component.html
+++ b/src/app/vente/vente.component.html
@@ -1,9 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-  <!--<h1 style="text-align:center;">
-    Welcome to <b>{{ title }}!</b>
-  </h1>-->
-  
- 
   <div class="container">
     <div class="row">
          <div class="col-lg-12">
@@ -17,14 +11,14 @@
                           <button  [routerLink]="['/annulation']" class="btn btn-success col-lg-2" style="margin-right:10px">Annulation</button>
                       </div> 
                   </div>
-                  <div class="col-lg-1">
+                  <!--<div class="col-lg-1">
                      <button class="btn btn-danger" [routerLink]="['/login']"><i class="fa fa-power-off"></i>Déconnéction</button>
-                  </div>
+                  </div>-->
               </div>
               <div class="row">
-                  <div class="col-lg-3" >
+                  <!--<div class="col-lg-3" >
                       <app-menus [dashboard]="true" [vente]="true" [histoire]="true" [profile]="true"></app-menus>
-                  </div>
+                  </div>-->
                   <div class="col-lg-9">
                         <div class="row" style="margin-top:3rem; margin-bottom:3rem;">
                                 <div class="input-group input-group-sm sort">
