--- a/src/app/vente/vente.component.html
+++ b/src/app/vente/vente.component.html
@@ -7,10 +7,10 @@
                      <!-- Menu de la section vente -->
                       <div class="row" style="margin-left:150px">
                           <button (click)="changeOnglet('directe')" class="btn col-lg-2 btn-sm" style="margin-right:10px;border:1px solid  green; ;background-color:white; color:green;">Vente</button>
-                          <button (click)="changeOnglet('ipm')" class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">IPM</button>
-                          <button (click)="changeOnglet('bon')" class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Bon</button>
-                          <button  (click)="changeOnglet('annulation')"  class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Annulation</button>
-                          <button    class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Historique</button>
+                          <!--<button (click)="changeOnglet('ipm')" class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">IPM</button>
+                          <button (click)="changeOnglet('bon')" class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Bon</button>-->
+                          <button  (click)="changeOnglet('annulation')"  class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Historique</button>
+                         <!-- <button    class="btn btn-success col-lg-2 btn-sm" style="margin-right:10px">Historique</button>-->
                       </div> 
                   </div>
                   <!--<div class="col-lg-1">
