--- a/src/app/vente/annulation/annulation.component.html
+++ b/src/app/vente/annulation/annulation.component.html
@@ -1,27 +1,49 @@
 <div style="margin-top:2em">
 	<form class="form-inline">
 		<label>De : </label>
-		<input type="text" />
+		<input name="dateDebut" [(ngModel)]="dateDebut" type="text" />
 		<label> A:</label>
-		<input type="text" style="margin-right:2em;margin-left:1em" />
-		<input type="button" class="btn btn-success" value="valider" />
+		<input type="text" name="dateFin" [(ngModel)]="dateFin" style="margin-right:2em;margin-left:1em" />
+		<input type="button" (click)="rechercheInterval()" class="btn btn-success" value="valider" />
 	</form>
 </div>
 <div style="margin-top:2em">
 	<table class="table table-striped table-condensed">
 		<tr>
-			<th>produit</th>
-			<th>quantite</th>
-			<th>prix</th>
+			<th>date</th>
 			<th>prix total</th>
 			<th>action</th>
 		</tr>
 		<tr *ngFor="let p of historique">
-			<td>{{p.produit}}</td>
-			<td>{{p.qt}}</td>
-			<td>{{p.prix}}</td>
-			<td>{{p.prix*p.qt}}</td>
-			<td><input type="button" class="btn btn-danger" (click)="annuler_vente()" value="annuler" /></td>
+			<td>{{p.date}}</td>
+			<td>{{p.montant}}</td>
+			<td><input type="button" (click)="openModal(template,p.infoSup)" class="btn btn-primary"  value="detaile" /></td>
 		</tr>
 	</table>
 </div>
+ <ng-template #template>
+                               <div class="modal-header">
+                                 <h4 class="modal-title pull-left">Modal</h4>
+                                 <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                                   <span aria-hidden="true">&times;</span>
+                                 </button>
+                               </div>
+                               <div class="modal-body">
+                                  <h1>Detailes Facture</h1>
+                                   <table class="table table-striped table-condensed">
+									   <tr>
+										   <td>produit</td>
+										   <td>quantite</td>
+										   <td>prix</td>
+									   </tr>
+									   <tr *ngFor="let p of produits">
+										   <td>{{p.medicament}}</td>
+										   <td>{{p.quantite}}</td>
+										   <td>{{p.prix}}</td>
+									   </tr>
+                                   </table>
+                                 
+                                  <button class="btn btn-success btn-sm" (click)="valider_vente()" >valider</button>
+                                  <button class="btn btn-danger btn-sm" (click)="annuler_vente()" >annuler</button>
+                               </div>
+   </ng-template>
